syntax = "proto3";

option go_package = "github.com/n0stack/n0stack/n0proto.go/deployment/v0;pdeployment";

package n0stack.deployment;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "provisioning/v0/block_storage.proto";


message Image {
  string name = 1;
  map<string, string> annotations = 3;
  uint64 version = 5;

  message RegisteredBlockStorage {
    string block_storage_name = 1;
    google.protobuf.Timestamp registered_at = 2;
  }
  repeated RegisteredBlockStorage registered_block_storages = 50;
  
  map<string, string> tags = 51;
}


service ImageService {
  rpc ListImages(ListImagesRequest) returns (ListImagesResponse) {}
  rpc GetImage(GetImageRequest) returns (Image) {}
  rpc ApplyImage(ApplyImageRequest) returns (Image) {}
  rpc DeleteImage(DeleteImageRequest) returns (google.protobuf.Empty) {}

  rpc RegisterBlockStorage(RegisterBlockStorageRequest) returns (Image) {}
  rpc UnregisterBlockStorage(UnregisterBlockStorageRequest) returns (Image) {}
  rpc GenerateBlockStorage(GenerateBlockStorageRequest) returns (n0stack.provisioning.BlockStorage) {}

  rpc TagImage(TagImageRequest) returns (Image) {}
  rpc UntagImage(UntagImageRequest) returns (Image) {}
}


message ListImagesRequest {}
message ListImagesResponse {
  repeated Image Images = 1;
}

message GetImageRequest {
  string name = 1;
}

message ApplyImageRequest {
  string name = 1;
  map<string, string> annotations = 3;
  uint64 version = 5;
}

message DeleteImageRequest {
  string name = 1;
}

message RegisterBlockStorageRequest {
  string image_name = 1;
  string block_storage_name = 2;

  repeated string tags = 3;
}
message UnregisterBlockStorageRequest {
  string image_name = 1;
  string block_storage_name = 2;
}
message GenerateBlockStorageRequest {
  string image_name = 1;
  
  string block_storage_name = 2;
  map<string, string> annotations = 3;

  uint64 request_bytes = 4;
  uint64 limit_bytes = 5;

  string tag = 6;
}

message TagImageRequest {
  string name = 1;
  string block_storage_name = 2;

  repeated string tags = 3;
}
message UntagImageRequest {
  string name = 1;
  string tag = 2;
}
